--- a/gem-puzzle/package.json
+++ b/gem-puzzle/package.json
@@ -1,7 +1,6 @@
 {
   "name": "gem-puzzle",
   "version": "1.0.0",
-  "description": "",
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +14,6 @@
     "eslint-plugin-import": "^2.22.1",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
-  }
+  },
+  "description": ""
 }
