--- a/gem-puzzle/package.json
+++ b/gem-puzzle/package.json
@@ -31,7 +31,6 @@
     "eslint-plugin-promise": "^4.2.1",
     "file-loader": "^5.0.2",
     "html-loader": "^0.5.5",
-    "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
@@ -42,10 +41,11 @@
   },
   "description": "",
   "dependencies": {
+    "copy-webpack-plugin": "^5.1.1",
     "downloadjs": "^1.4.7",
     "gif.js-upgrade": "^0.2.1",
-    "upng-js": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
-    "copy-webpack-plugin": "^5.1.1"
+    "prettier": "^2.2.0",
+    "upng-js": "^2.1.0"
   }
 }
